--- a/index.html
+++ b/index.html
@@ -94,15 +94,31 @@
       <div class="col-75">
         <input type="text" id="pdfCustomerContact" value="" placeholder="customer contact details">
       </div>
-    </div>
+    </div>  
     <div class="row">
       <div class="col-25">
         <label>Test Pressure</label>
       </div>
       <div class="col-75">
-        <input type="text" id="pdfTestPressure" value="" placeholder="test pressure">
+        <input type="number" id="pdfTestPressure" min="0" max="1000" value="0">
       </div>
     </div>      
+    <div class="row">
+      <div class="col-25">
+        <label>Notes</label>
+      </div>
+      <div class="col-75">
+        <textarea id="pdfNotes" name="pdfNotes" rows="6" placeholder="Type your notes here..." style="width:100%;"></textarea>
+      </div>
+    </div>  
+    <div class="row">
+      <div class="col-25">
+        <label>Filename</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="pdfFileName" value="report.pdf">
+      </div>
+    </div>    
     <div class="row">
       <div class="col-25">
       </div>
@@ -6899,6 +6915,31 @@ function addRow(name, value)
   tableData.push([name, value]);
 }
 
+function sanitizeFilename(inputName) 
+{
+  const defaultName = "report.pdf";
+
+  // Trim whitespace
+  let trimmed = inputName.trim();
+
+  // Define invalid characters for filenames (Windows-safe)
+  const invalidChars = /[\/\\?%*:|"<>]/;
+
+  // Check if blank or contains invalid characters
+  if (!trimmed || invalidChars.test(trimmed)) 
+  {
+    return defaultName;
+  }
+
+  // Check if filename has an extension
+  if (!trimmed.includes('.')) 
+  {
+    trimmed += '.pdf';
+  }
+
+  return trimmed;
+}
+
 async function generatePDF() 
 {
   const { jsPDF } = window.jspdf;
@@ -6951,55 +6992,76 @@ async function generatePDF()
   addRow("Installed By", item.savedInstallerName);
   
   addRow("Machine Make Model", item.savedMachineName);
-  addRow("Machine Serial Number", item.savedPlantNumber);
-  addRow("Machine Hours", item.savedPlantHours);
+  addRow("Machine Plant Number", item.savedPlantNumber);
+  addRow("Machine Hours", item.savedPlantHours + " hours");
   
-  addRow("Target Pressure", fieldTargetPressure.value);
+  addRow("Target Pressure", fieldTargetPressure.value + " Pa");
 
-  addRow("Test Pressure", document.querySelector("#pdfTestPressure").value);
+  addRow("Test Pressure", document.querySelector("#pdfTestPressure").value + " Pa");
   
   addRow({content: "Alarm: Pressure", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Minimum", fieldPressureThresholdMin.value);
-  addRow("  Maximum", fieldPressureThresholdMax.value); 
-  addRow("  On Time", fieldPressureOnTime.value);
-  addRow("  Off Time", fieldPressureOffTime.value); 
+  addRow("  Minimum", fieldPressureThresholdMin.value + " Pa");
+  addRow("  Maximum", fieldPressureThresholdMax.value + " Pa"); 
+  addRow("  On Time Delay", fieldPressureOnTime.value + " seconds");
+  addRow("  Off Time Delay", fieldPressureOffTime.value + " seconds"); 
 
   addRow({content: "Alarm: CO2", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Alarm Threshold", fieldCO2AlarmThreshold.value);
-  addRow("  Warning Threshold", fieldCO2WarningThreshold.value); 
-  addRow("  On Time", fieldCO2AlarmOnTime.value);
-  addRow("  Off Time", fieldCO2AlarmOffTime.value); 
+  addRow("  Red Alarm Threshold", fieldCO2AlarmThreshold.value + " ppm");
+  addRow("  Orange Warning Threshold", fieldCO2WarningThreshold.value + " ppm"); 
+  addRow("  On Time Delay", fieldCO2AlarmOnTime.value + " seconds");
+  addRow("  Off Time Delay", fieldCO2AlarmOffTime.value + " seconds"); 
 
-  addRow({content: "Alarm: Fan", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Threshold", fieldFanThreshold.value);
-  addRow("  On Time", fieldFanOnTime.value);
-  addRow("  Off Time", fieldFanOffTime.value); 
+  addRow({content: "Alarm: Fan Speed Warning", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
+  addRow("  Threshold", fieldFanThreshold.value + " %");
+  addRow("  On Time Delay", fieldFanOnTime.value + " seconds");
+  addRow("  Off Time Delay", fieldFanOffTime.value + " seconds"); 
   
   addRow({content: "Alarm: Muting", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Mute Alarm duration", fieldMuteDuration.value);
-  addRow("  Mute Information duration", fieldMuteInfoDuration.value);
+  addRow("  Mute Alarm duration", fieldMuteDuration.value + " minutes");
+  addRow("  Mute Warning duration", fieldMuteInfoDuration.value + " minutes");
   
   addRow({content: "Settings : CO2 Flush", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Threshold to start", fieldCO2FlushLevelOn.value);
-  addRow("  Thresold to stop", fieldCO2FlushLevelOff.value);
-  addRow("  Presure to Flush at", fieldCO2FlushTarget.value);   
+  addRow("  Threshold to start", fieldCO2FlushLevelOn.value + " ppm");
+  addRow("  Threshold to stop", fieldCO2FlushLevelOff.value + " ppm");
+  addRow("  Flush Target Pressure", fieldCO2FlushTarget.value + " Pa");   
   
-  addRow({content: "Settings : Filter Life", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
-  addRow("  Main Filter life", fieldFilterLifeMain.value);
-  addRow("  Hepa Filter life", fieldFilterLifeHepa.value);    
-  addRow("  Recirculation Filter life", fieldFilterLifeRecirculation.value);  
+  addRow({content: "Settings : Filter Service Levels", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
+  addRow("  Main Filter Service", fieldFilterLifeMain.value + " hours");
+  addRow("  Hepa Filter Service", fieldFilterLifeHepa.value + " hours");    
+  addRow("  Recirculation Filter Service", fieldFilterLifeRecirculation.value + " hours");  
 
   addRow({content: "Filter : Main", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
   addRow("  Part Number", document.querySelector("#mainPartNumber").value);
-  addRow("  Serial Number", document.querySelector("#mainSerialNumber").value);    
+  addRow("  Serial Number", document.querySelector("#mainSerialNumber").value); 
+  addRow("  Installed Date", document.querySelector("#mainInstalledDate").value);  
   
   addRow({content: "Filter : HEPA", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
   addRow("  Part Number", document.querySelector("#hepaPartNumber").value);
   addRow("  Serial Number", document.querySelector("#hepaSerialNumber").value); 
+  addRow("  Installed Date", document.querySelector("#hepaInstalledDate").value);
   
   addRow({content: "Filter : Recirculation", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
   addRow("  Part Number", document.querySelector("#recirculationPartNumber").value);
-  addRow("  Serial Number", document.querySelector("#recirculationSerialNumber").value);        
+  addRow("  Serial Number", document.querySelector("#recirculationSerialNumber").value);    
+  addRow("  Installed Date", document.querySelector("#recirculationInstalledDate").value);  
+  
+  addRow({content: "Calibration", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
+  if (cCalibrationCompany.value.length == 0 &&
+     cCalibrationName.value.length == 0 &&
+     cCalibrationPhone.value.length == 0)
+  {
+     addRow("  Status", "Not calibrated");
+  }
+  else
+  {
+    addRow("  Date", cCalibrationDate.value);
+    addRow("  Company", cCalibrationCompany.value);
+    addRow("  Name", cCalibrationName.value);
+    addRow("  Contact", cCalibrationPhone.value);
+  }
+
+  addRow({content: "Notes", colSpan:2, styles: { halign: 'left', fillColor: [220, 220, 220], fontStyle: 'bold' }}, "");
+  addRow({content: document.querySelector("#pdfNotes").value, colSpan:2, style: { halign: 'left'}}, "");
 
   // Generate table
   doc.autoTable({
@@ -7012,9 +7074,11 @@ async function generatePDF()
     },
     theme: 'grid'
   });
-
+ 
+  let filename = sanitizeFilename(document.querySelector("#pdfFileName").value)
+  
   // Save PDF
-  doc.save('items.pdf');
+  doc.save(filename);
 }
 
     // Helper to convert image URL to base64
